# MemoryPool

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MemoryPool.h  MemoryPool.tcc  MemoryPool_test.cpp  README.md  memory_pool.h
.github/workflows/: cmake-multi-platform.yml  coverage.yml
cmake/: MemoryPoolConfig.cmake
docs/adr/: 0001-slotlist-inline-links.md  0002-spinlock-over-mutex-for-noexcept-transfer.md
include/memory_pool/: memory_pool.h  memory_pool.tcc
include/pool_allocator/: general_helpers.hpp  pool_allocator.h  pool_allocator.tcc  pool_deleter.hpp  shared_helpers.hpp  unique_helpers.hpp
tests/: CMakeLists.txt  MemoryPool_test.cpp  StackAlloc.h  basic_helper_test.cpp  basic_type_test.cpp  complex_type_test.cpp  import_and_export_test.cpp  import_export_test.cpp  incomplete_struct_test.cpp  noexcept_transfer_test.cpp  performance_test.cpp  performance_test_default.cpp  performance_test_pool.cpp  performance_test_random.cpp  slot_list_test.cpp  test_structs.h  transfer_test.cpp
